--- a/index.html
+++ b/index.html
@@ -805,8 +805,7 @@ padding: 10px;*/
 	width: auto;
 	height: auto;
 	display: block;
-	
-	/*padding-left: 40px;*/
+	/*padding-right: 0;*/
 }
 .inner-content64-nopic-pic {
     float: left;    
@@ -877,12 +876,11 @@ padding: 10px;*/
 .block12-inner-content-pic-pic-pic-pic-pic{
     
     width: 100%;
-    float:left;
-    min-height: 300px;
+    min-height: 351px;
 }
 .content20-pic-pic-pic-pic-pic{
     width: 20%;
-    float:left;    
+    height: auto;	
 }
 
 </style>
@@ -909,7 +907,36 @@ padding: 10px;*/
 				</ul>
 			</div>
 		</div>
-	</section><!--15-bg#242424-->
+	</section>
+	<style>
+	/*  BLOCK13  */
+.block13-static-info-dcs-cv-g-u-h{
+    background: #bd2631;
+    padding: 40px 100px;
+}
+   
+ .block13-static-info-dcs-cv-g-u-h nav{
+    float: left;
+     
+}
+.block13-static-info-dcs-cv-g-u-h nav li a{
+    color: #fff;
+    font-size: 18px;
+    padding: 50px 50px;
+    display: inline-block;
+    text-transform: ;/*perebyty uppercase bez lower v block 3*/
+    /*border-bottom: 7px solid transparent;*/
+}
+.f{margin-right: 13px;}
+.s{margin-right: 100px;}
+.as{margin-right: 149px;}
+.aas{margin-right: 203px;}
+.l{margin-right: 0;}
+/*nav li a:hover{
+    color: #222;
+}*/
+	</style>
+	<!--15-bg#242424-->
 	<section>
 		<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
 			<div class="block15-inner-static-info-t-t-t-t">
