--- a/index.html
+++ b/index.html
@@ -880,7 +880,12 @@ padding: 10px;*/
 }
 .content20-pic-pic-pic-pic-pic{
     width: 20%;
-   	
+   height: 351px;	
+}	   
+.content20-pic-pic-pic-pic-pic img{
+    display: block;
+    width: auto;
+   height: auto;	
 }
 
 </style>
