--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ padding: 10px;*/
 }		
 .block4-title-red {
 	margin-bottom: 0;
-	color: red;
+	color: #bd2631;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 32px;
 	font-weight: bold;
@@ -466,7 +466,7 @@ padding: 10px;*/
 <!--/div-->
 </section>
 <style>
-/****   BLOCK2*******************************************2   */
+/****   BLOCK2******#bd2631*************************************2   */
 
 .block6-logo-section-contacts-information1-text-nav {
 	background: #bd2631;
@@ -665,7 +665,7 @@ padding: 10px;*/
 .block789-title-red {
 	margin-bottom: 0;
 	margin-right: 0;
-	color: red;
+	color: #bd2631;
 	font-size: 30px;
 }
 .block789-title {
@@ -736,13 +736,13 @@ padding: 10px;*/
 			display: inline-block;
 		}
 		.sgr-title {
-			color: red;
+			color: #bd2631;
 			font-weight: 600;
 			font-size: 36px;
 			text-transform: uppercase;
 		}
 		.sgr-subtitle {
-			color: red;
+			color: #bd2631;
 			font-weight: 600;
 			font-size: 18px;
 		}
@@ -889,6 +889,23 @@ padding: 10px;*/
 }
 
 </style>
+<section>
+    <div class="block13-static-info-dcs-cv-g-u-h clearfix">
+
+        <nav>
+            <ul>
+               
+                <li><a  class="dcs-cv-g-u-h-current" href="#">Data Center Construction</a></li>
+                <li><a  class="dcs-cv-g-u-h-current" href="#">College / University</a></li>
+                <li><a  class="dcs-cv-g-u-h-current" href="#">Govermment</a></li>
+                <li><a  class="dcs-cv-g-u-h-current" href="#">Utility</a></li>
+                <li><a  class="dcs-cv-g-u-h-current-last" href="#">Healthcare</a></li>
+            </ul>                           
+        </nav>
+            
+    </div>      
+
+</section>
 	<!--block14-->
 	<section>
 		<div class="block14-contacts-information-logos clearfix">
@@ -915,6 +932,7 @@ padding: 10px;*/
 	</section>
 	<style>
 	/*  BLOCK13  */
+		
 .block13-static-info-dcs-cv-g-u-h{
     background: #bd2631;
     padding: 40px 100px;
