--- a/index.html
+++ b/index.html
@@ -901,11 +901,37 @@ padding: 10px;*/
                 <li><a  class="dcs-cv-g-u-h-current" href="#">Utility</a></li>
                 <li><a  class="dcs-cv-g-u-h-current-last" href="#">Healthcare</a></li>
             </ul>                           
-        </nav>
-            
-    </div>      
-
+        </nav>            
+    </div>
 </section>
+<style>
+	/*  BLOCK13  */
+.block13-static-info-dcs-cv-g-u-h{
+    background: #bd2631;
+    padding: 40px 100px;
+}
+   
+ .block13-static-info-dcs-cv-g-u-h nav{
+    float: left;
+     
+}
+.block13-static-info-dcs-cv-g-u-h nav li a{
+    color: #fff;
+    font-size: 16px;
+    padding: 24px 16px 16px;
+    display: inline-block;
+    text: bold;
+}
+.f{margin-right: 13px;}
+.s{margin-right: 100px;}
+.as{margin-right: 149px;}
+.aas{margin-right: 203px;}
+.l{margin-right: 0;}
+
+.block13-static-info-dcs-cv-g-u-h nav li a:hover{
+    color: blue;
+}
+	</style>	
 	<!--block14-->
 	<section>
 		<div class="block14-contacts-information-logos clearfix">
