--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ padding: 10px;*/
 
 
 	<section>
-		<div class="block7-content-pic-pic-pic clearfix">
+		<div class="block7-content-pic-pic-pic">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
