--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ padding: 10px;*/
 
 
 	<section>
-		<div class="block7-content-pic-pic-pic">
+		<div class="block7-content-pic-pic-pic  clearfix">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
@@ -657,10 +657,6 @@ padding: 10px;*/
 }
 .block789-example-left p > span{
     display: block;
-}
-.block789-example-right p > span{
-    display: block;
-    margin-bottom: 10px;	
 }
 .block789-title-red {
 	margin-bottom: 0;
@@ -882,11 +878,11 @@ padding: 10px;*/
     width: 20%;
    height: 351px;	
 }	   
-.content20-pic-pic-pic-pic-pic img{
+/*.content20-pic-pic-pic-pic-pic img{
     display: block;
     width: auto;
    height: auto;	
-}
+}*/
 
 </style>
 <section>
