--- a/index.html
+++ b/index.html
@@ -865,7 +865,22 @@ padding: 10px;*/
 </section>
 	<style>
 	/*  BLOCK12  h= 351PIC*/
+		/*  BLOCK12  PIC*/
 .block12-content-pic-pic-pic-pic-pic{
+    background: none;
+    padding: 0;
+}
+.block12-inner-content-pic-pic-pic-pic-pic{
+    
+    width: 100%;
+    float:left;
+    min-height: 350px;
+}
+.content20-pic-pic-pic-pic-pic{
+    width: 20%;
+    float:left;    
+}
+/*.block12-content-pic-pic-pic-pic-pic{
     background: none;
     padding: 0;
 }
@@ -878,7 +893,7 @@ padding: 10px;*/
     width: 20%;
    height: 351px;	
 }	   
-/*.content20-pic-pic-pic-pic-pic img{
+.content20-pic-pic-pic-pic-pic img{
     display: block;
     width: auto;
    height: auto;	
