--- a/index.html
+++ b/index.html
@@ -835,29 +835,29 @@ padding: 10px;*/
         <div class="block12-inner-content-pic-pic-pic-pic-pic">
             <div class="row">
                 <div class="content20-pic-pic-pic-pic-pic">
-                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                    <!--div class="inner-content20-pic-pic-pic-pic-pic"-->
                         <img src="img/1.jpg" alt="" title="">                    
-                    </div>
+                    <!--/div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
-                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                    <!--div class="inner-content20-pic-pic-pic-pic-pic"-->
                         <img src="img/2.jpg" alt="" title="">                    
-                    </div>
+                    <!--/div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
-                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                    <!--div class="inner-content20-pic-pic-pic-pic-pic"-->
                         <img src="img/3.jpg" alt="" title="">                    
-                    </div>
+                    <!--/div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
-                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                    <!--div class="inner-content20-pic-pic-pic-pic-pic"-->
                         <img src="img/4.jpg" alt="" title="">                    
-                    </div>
+                    <!--/div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
-                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                    <!--div class="inner-content20-pic-pic-pic-pic-pic"-->
                         <img src="img/5.jpg" alt="" title="">                    
-                    </div>
+                    <!--/div-->
                 </div>
             </div>
         </div>    
