--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ padding: 10px;*/
 	height: 452px;
 }	
 .content25-pic-pic-pic {
-	/*position: relative;*/
+	position: relative;
 	float: left;
 	width: 25%;
 	height: 452px;
@@ -795,13 +795,13 @@ padding: 10px;*/
 	float: right;
 	width: 36%;
 	height: 192px;
-	
+	padding-right: 0;
 }
 .content36-nopic-pic img {
 	width: auto;
 	height: auto;
 	display: block;
-	/*padding-right: 0;*/
+	padding-right: 0;
 }
 .inner-content64-nopic-pic {
     float: left;    
