--- a/index.html
+++ b/index.html
@@ -836,27 +836,27 @@ padding: 10px;*/
             <div class="row">
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/1.jpg" alt="" title="">                    
+                        <img src="img/1.jpg" alt="">                    
                     </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/2.jpg" alt="" title="">                    
+                        <img src="img/2.jpg" alt="">                    
                     </div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/3.jpg" alt="" title="">                    
+                        <img src="img/3.jpg" alt="">                    
                     </div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/4.jpg" alt="" title="">                    
+                        <img src="img/4.jpg" alt="">                    
                     </div-->
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/5.jpg" alt="" title="">                    
+                        <img src="img/5.jpg" alt="">                    
                     </div>
                 </div>
             </div>
@@ -891,10 +891,11 @@ padding: 10px;*/
 }
 .content20-pic-pic-pic-pic-pic{
     width: 20%;
-   height: 351px;	
+   height: 351px;
+   float: left;	
 }	   
 .content20-pic-pic-pic-pic-pic img{
-   
+   display: block;
     width: auto;
    height: auto;	
 }
