--- a/index.html
+++ b/index.html
@@ -836,27 +836,27 @@ padding: 10px;*/
             <div class="row">
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/1.jpg" alt="">                    
+                        <img src="img/1.png" alt="" title="">                    
                     </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/2.jpg" alt="">                    
-                    </div-->
+                        <img src="img/2.png" alt="" title="">                    
+                    </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/3.jpg" alt="">                    
-                    </div-->
+                        <img src="img/3.png" alt="" title="">                    
+                    </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/4.jpg" alt="">                    
-                    </div-->
+                        <img src="img/4.png" alt="" title="">                    
+                    </div>
                 </div>
                 <div class="content20-pic-pic-pic-pic-pic">
                     <div class="inner-content20-pic-pic-pic-pic-pic">
-                        <img src="img/5.jpg" alt="">                    
+                        <img src="img/5.png" alt="" title="">                    
                     </div>
                 </div>
             </div>
