--- a/index.html
+++ b/index.html
@@ -880,6 +880,9 @@ padding: 10px;*/
     width: 20%;
     float:left;    
 }
+.content20-pic-pic-pic-pic-pic img{
+   display: block;	
+}
 /*.block12-content-pic-pic-pic-pic-pic{
     background: none;
     padding: 0;
