--- a/index.html
+++ b/index.html
@@ -881,7 +881,8 @@ padding: 10px;*/
     float:left;    
 }
 .content20-pic-pic-pic-pic-pic img{
-   display: block;	
+   display: block;
+	
 }
 /*.block12-content-pic-pic-pic-pic-pic{
     background: none;
@@ -910,20 +911,21 @@ padding: 10px;*/
         <nav>
             <ul>
                
-                <li><a  class="dcs-cv-g-u-h-current" href="#">Data Center Construction</a></li>
-                <li><a  class="dcs-cv-g-u-h-current" href="#">College / University</a></li>
-                <li><a  class="dcs-cv-g-u-h-current" href="#">Govermment</a></li>
-                <li><a  class="dcs-cv-g-u-h-current" href="#">Utility</a></li>
-                <li><a  class="dcs-cv-g-u-h-current-last" href="#">Healthcare</a></li>
+                <li><a  class="f" href="#">Data Center Construction</a></li>
+                <li><a  class="s" href="#">College / University</a></li>
+                <li><a  class="as" href="#">Govermment</a></li>
+                <li><a  class="aas" href="#">Utility</a></li>
+                <li><a  class="l" href="#">Healthcare</a></li>
             </ul>                           
         </nav>            
     </div>
 </section>
 <style>
 	/*  BLOCK13  */
+	
 .block13-static-info-dcs-cv-g-u-h{
     background: #bd2631;
-    padding: 40px 100px;
+    padding: 0;
 }
    
  .block13-static-info-dcs-cv-g-u-h nav{
@@ -932,8 +934,8 @@ padding: 10px;*/
 }
 .block13-static-info-dcs-cv-g-u-h nav li a{
     color: #fff;
-    font-size: 16px;
-    padding: 24px 16px 16px;
+    font-size: 18px;
+    padding-left: 24px 16px;
     display: inline-block;
     text: bold;
 }
@@ -972,33 +974,7 @@ padding: 10px;*/
 		</div>
 	</section>
 	<style>
-	/*  BLOCK13  */
-		
-.block13-static-info-dcs-cv-g-u-h{
-    background: #bd2631;
-    padding: 40px 100px;
-}
-   
- .block13-static-info-dcs-cv-g-u-h nav{
-    float: left;
-     
-}
-.block13-static-info-dcs-cv-g-u-h nav li a{
-    color: #fff;
-    font-size: 18px;
-    padding: 50px 50px;
-    display: inline-block;
-    text-transform: ;/*perebyty uppercase bez lower v block 3*/
-    /*border-bottom: 7px solid transparent;*/
-}
-.f{margin-right: 13px;}
-.s{margin-right: 100px;}
-.as{margin-right: 149px;}
-.aas{margin-right: 203px;}
-.l{margin-right: 0;}
-/*nav li a:hover{
-    color: #222;
-}*/
+
 	</style>
 	<!--15-bg#242424-->
 	<section>
