--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@ padding: 10px;*/
 .block13-static-info-dcs-cv-g-u-h nav li a{
     color: #fff;
     font-size: 18px;
-    padding-left: 24px 16px;
+    padding: 24px 16px;
     display: inline-block;
     text: bold;
 }
