--- a/index.html
+++ b/index.html
@@ -941,8 +941,8 @@ padding: 10px;*/
 }
 .f{margin-right: 63px;}
 .s{margin-right: 100px;}
-.as{margin-right: 149px;}
-.aas{margin-right: 163px;}
+.as{margin-right: 179px;}
+.aas{margin-right: 133px;}
 .l{margin-right: 0;}
 
 .block13-static-info-dcs-cv-g-u-h nav li a:hover{
@@ -952,29 +952,41 @@ padding: 10px;*/
 	<!--block14-->
 	<section>
 		<div class="block14-contacts-information-logos clearfix">
-			<div class="logos-social-icons">
+			<div class="block14-logos-social-icons">
 				<ul>
 					<li>
-						<a href="#"><img src="img/enersys.png" title=""></a>
+						<a href="#"><img class= ".sgr-img1"src="img/enersys.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/deca.png" title=""></a>
+						<a href="#"><img src="img/deca.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="dynasty.png" title=""></a>
+						<a href="#"><img src="dynasty.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/technologies.png" title=""></a>
+						<a href="#"><img src="img/technologies.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/power" title=""></a>
+						<a href="#"><img src="img/power" alt=""></a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</section>
 	<style>
-
+		.sgr-img1 {
+			width: 100px;
+			min-height: 140px;
+			margin-right: 55px;
+		}
+		.block14-logos-social-icons ul li {
+			padding-top: 60px;
+			float: left;
+			padding-left: 217px;
+		}
+		.block14-logos-social-icons img {
+			display: block;
+		}
 	</style>
 	<!--15-bg#242424-->
 	<section>
