--- a/index.html
+++ b/index.html
@@ -958,16 +958,16 @@ padding: 10px;*/
 						<a href="#"><img class= ".sgr-img1"src="img/enersys.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/deca.png" alt=""></a>
+						<a href="#"><img src="img/deka.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="dynasty.png" alt=""></a>
+						<a href="#"><img src="img/dynasty.png" alt=""></a>
 					</li>
 					<li>
 						<a href="#"><img src="img/technologies.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/power" alt=""></a>
+						<a href="#"><img src="img/power.png" alt=""></a>
 					</li>
 				</ul>
 			</div>
