--- a/index.html
+++ b/index.html
@@ -977,53 +977,136 @@ padding: 10px;*/
 		.sgr-img1 {
 			width: 100px;
 			min-height: 140px;
-			margin-right: 55px;
+			margin-right: 35px;
 		}
 		.block14-logos-social-icons ul li {
-			padding-top: 60px;
+			padding-top: 65px;
 			float: left;
-			padding-left: 217px;
+			padding-left: 190px;
+			padding-bottom: 65px;
 		}
 		.block14-logos-social-icons img {
 			display: block;
 		}
 	</style>
 	<!--15-bg#242424-->
+	
 	<section>
 		<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
-			<div class="block15-inner-static-info-t-t-t-t">
-				<div class="row">
-					<ul>
-						<li class="content25-t-t-t-t">
-							<p><span class="block15-title-red">About Us</span><span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.<br class="next">
-							Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span></p>
-						</li>
-						<li class="content25-t-t-t-t">
-							<p><span class="block15-title-red">Recent posts</span> <span>UPS 101<br class="link">
-							How Do You Rate?Understanding<br class="link">
-							Ratings Beyond AA<br class="link">
-							Six Critical Needs for any Critical Power Maintenance Provider<br class="link">
-							Are You at Risk for These Leading Causes of UPS Power Failure?</span></p>
-						</li>
-						<li class="content25-t-t-t-t">
-							<p><span class="block15-title-red">Recent tweets</span> <span class="block15-subtitle">Sure Power is 600 Days Injury Free-<br>
-							Https://t.co/3fjAz1RKUo<br>
-							8 days ago<br class="tweets">
-							Deta's system meltdown causes canceled flights, puts focus on aging technology https://t.co/HZIM3gdEY7 via @WSJ The Wall Street Journal<br>
-							162 days ago</span></p>
-						</li>
-						<li style="list-style: none; display: inline">
-							<p><span class="block15-title-red">Contact information</span> <span class="block15-subtitle">Call-free: 800-455-0054<br class="block15-subtitle-red">
-							Philadelphia Area:<br class="block15-subtitle">
-							200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</span></p><span class="block15-subtitle"><br class="block15-subtitle-red">
-							BaltimoreArea:<br class="block15-subtitle">
+			 <div class="block15-static-info">
+            <ul>
+                <li>
+                    <p class="block15-title">About us</p>
+                    <p>
+                        <span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</span>
+						<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
+                    </p>
+                </li>
+                <li>
+                    <p class="block15-title">Recent posts</p>
+                    <p><span class="block15-subtitle">UPS 101</span>
+							<span class="block15-subtitle">How Do You Rate?Understanding</span>
+							<span class="block15-subtitle">Ratings Beyond AA</span>
+							<span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span>
+							<span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span>
+                    </p>
+                </li>
+                <li>
+                    <p class="block15-title">Recent tweets</p>
+                    <p>
+                         	<span class="block15-subtitle">Sure Power is 600 Days Injury Free-</span>
+							<span class="block15-subtitle">Https://t.co/3fjAz1RKUo</span>
+							<span class="block15-subtitle">8 days ago</span>
+							<span class="block15-subtitle" class="tweets">
+							<span class="block15-subtitle">Deta's system meltdown causes canceled flights, puts focus on aging technology https://t.co/HZIM3gdEY7 via @WSJ The Wall Street Journal</span>
+							<span class="block15-subtitle">162 days ago</span>
+                    </p>
+                </li>
+                <li>
+                    <p class="block15-title">Contact information</p>
+                    <p>
+                           
+                           <span class="block15-subtitle">Call-free: 800-455-0054</span>
+                           <span class="block15-subtitle-red">
+							Philadelphia Area:</span>
+							<span class="block15-subtitle">
+							200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</span>
+							<span class="block15-subtitle-red">
+							BaltimoreArea:</span>
+							<span class="block15-subtitle">
 							3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
-							<p></p>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div><!--16-bg#131313-->
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>		
+<style>
+.block15-contacts-information-before-footer-t-t-t-t clearfix{
+	background: #242424;
+	padding: 0;
+}
+.block15-static-info {
+    float: left;
+    margin-top: 46px;
+    padding-left: 57px;
+}
+.block15-subtitle-red{
+    color: #bd2631;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+.block15-title{
+    color: #bd2631;
+    font-size: 24px;
+}
+.block15-subtitle{
+    color: #fff;
+    font-size: 14px;
+}
+.block15-static-info li p:first-of-type{
+    float: left; 
+}
+.block15-static-info li p:last-of-type{
+	margin-right: 8px;
+    color: #fff;
+    font-size: 14px;
+}
+.block15-static-info p > span{
+    display: block;
+}
+.block15-static-info ul li{
+    padding-right: 35px;
+    border-right: 1px solid #e6e6e6;
+    margin-right: 20px;
+    margin-top: 
+}
+.block15-static-info ul li:last-of-type{
+    border-right: none;
+    padding-right: 0;
+    margin-right: 0;
+}
+.lock16-footer{
+	background: #131313;
+	padding: 0;
+}
+.r-footer{
+	float: right;
+	padding-right: 20px;
+}
+.l-footer{
+	float: left
+	padding-left: 20px;	
+}
+</style>
+			
+			
+			
+			
+			
+			
+			
+		<!--16-bg#131313-->
 		<div class="block16-footer">
 			<div class="r-footer">
 				<p>Copiright @ 2017 Sure Power Inc. All Rights Reserved. Employee Intranet<br></p>
