--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@ padding: 10px;*/
 			<div class="block14-logos-social-icons">
 				<ul>
 					<li>
-						<a href="#"><img class= ".sgr-img1"src="img/enersys.png" alt=""></a>
+						<a href="#"><img class= "sgr-img1"src="img/enersys.png" alt=""></a>
 					</li>
 					<li>
 						<a href="#"><img src="img/deka.png" alt=""></a>
