--- a/index.html
+++ b/index.html
@@ -955,30 +955,31 @@ padding: 10px;*/
 			<div class="block14-logos-social-icons">
 				<ul>
 					<li>
-						<a href="#"><img class= "sgr-img1"src="img/enersys.png" alt=""></a>
+						<a class="s" href="#"><img src="img/enersys.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/deka.png" alt=""></a>
+						<a class="s" href="#"><img src="img/deka.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/dynasty.png" alt=""></a>
+						<a class="s" href="#"><img src="img/dynasty.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/technologies.png" alt=""></a>
+						<a class="s" href="#"><img src="img/technologies.png" alt=""></a>
 					</li>
 					<li>
-						<a href="#"><img src="img/power.png" alt=""></a>
+						<a class="s" href="#"><img src="img/power.png" alt=""></a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</section>
 	<style>
-		.sgr-img1 {
-			width: 100px;
-			min-height: 140px;
-			margin-right: 35px;
-		}
+		.f{margin-right: 63px;}
+.s{margin-right: 100px;}
+.as{margin-right: 179px;}
+.aas{margin-right: 133px;}
+.l{margin-right: 0;}
+		
 		.block14-logos-social-icons ul li {
 			padding-top: 65px;
 			float: left;
