--- a/index.html
+++ b/index.html
@@ -955,36 +955,32 @@ padding: 10px;*/
 			<div class="block14-logos-social-icons">
 				<ul>
 					<li>
-						<a class="s" href="#"><img src="img/enersys.png" alt=""></a>
+						<a href="#"><img src="img/enersys.png" alt=""></a>
 					</li>
 					<li>
-						<a class="s" href="#"><img src="img/deka.png" alt=""></a>
+						<a href="#"><img src="img/deka.png" alt=""></a>
 					</li>
 					<li>
-						<a class="s" href="#"><img src="img/dynasty.png" alt=""></a>
+						<a href="#"><img src="img/dynasty.png" alt=""></a>
 					</li>
 					<li>
-						<a class="s" href="#"><img src="img/technologies.png" alt=""></a>
+						<a href="#"><img src="img/technologies.png" alt=""></a>
 					</li>
 					<li>
-						<a class="s" href="#"><img src="img/power.png" alt=""></a>
+						<a href="#"><img src="img/power.png" alt=""></a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</section>
-	<style>
-		.f{margin-right: 63px;}
-.s{margin-right: 100px;}
-.as{margin-right: 179px;}
-.aas{margin-right: 133px;}
-.l{margin-right: 0;}
+	<style>		
 		
 		.block14-logos-social-icons ul li {
 			padding-top: 65px;
 			float: left;
-			padding-left: 190px;
+			padding-left: 100px;
 			padding-bottom: 65px;
+			margin: 0;
 		}
 		.block14-logos-social-icons img {
 			display: block;
