--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@ padding: 10px;*/
     </div>
 </div>		
 <style>
-.block15-contacts-information-before-footer-t-t-t-t clearfix{
+.block15-contacts-information-before-footer-t-t-t-t {
 	background: #242424;
 	padding: 0;
 }
