--- a/index.html
+++ b/index.html
@@ -1062,12 +1062,14 @@ padding: 10px;*/
     font-size: 14px;
 }
 .block15-static-info li p:first-of-type{
-    float: left; 
+    float: left;
+	display:inline-block;
 }
 .block15-static-info li p:last-of-type{
 	margin-right: 8px;
     color: #fff;
     font-size: 14px;
+	display:inline-block;
 }
 .block15-static-info p > span{
     display: block;
@@ -1083,18 +1085,24 @@ padding: 10px;*/
     padding-right: 0;
     margin-right: 0;
 }
+/*  BLOCK16  */
 .lock16-footer{
-	background: #131313;
-	padding: 0;
+    background: #131313;
+    padding: 50px 50px;
 }
-.r-footer{
-	float: right;
-	padding-right: 20px;
+.r-footer {
+    float: right;
+    color: #fff;
+    font-size: 18px;
+
 }
-.l-footer{
-	float: left
-	padding-left: 20px;	
-}
+.l-footer {
+    float: left;
+    color: #fff;
+    font-size: 18px;
+
+}	
+
 </style>
 			
 			
