--- a/index.html
+++ b/index.html
@@ -991,26 +991,27 @@ padding: 10px;*/
 	<section>
 		<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
 			 <div class="block15-static-info">
-            <ul>
-                <li>
-                    <p class="block15-title">About us</p>
+           <!--div class="block15-inner-static-info-t-t-t-t"-->
+				<div class="row">
+					<ul>
+						<li class="content25-t-t-t-t">
+							<p class="block15-title">About us</p>
                     <p>
                         <span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</span>
 						<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
                     </p>
-                </li>
-                <li>
-                    <p class="block15-title">Recent posts</p>
+						</li>
+						<li class="content25-t-t-t-t">
+							<p class="block15-title">Recent posts</p>
                     <p><span class="block15-subtitle">UPS 101</span>
 							<span class="block15-subtitle">How Do You Rate?Understanding</span>
 							<span class="block15-subtitle">Ratings Beyond AA</span>
 							<span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span>
 							<span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span>
                     </p>
-                </li>
-                <li>
-                    <p class="block15-title">Recent tweets</p>
-                    <p>
+						</li>
+						<li class="content25-t-t-t-t">
+							 <p>
                          	<span class="block15-subtitle">Sure Power is 600 Days Injury Free-</span>
 							<span class="block15-subtitle">Https://t.co/3fjAz1RKUo</span>
 							<span class="block15-subtitle">8 days ago</span>
@@ -1018,9 +1019,9 @@ padding: 10px;*/
 							<span class="block15-subtitle">Deta's system meltdown causes canceled flights, puts focus on aging technology https://t.co/HZIM3gdEY7 via @WSJ The Wall Street Journal</span>
 							<span class="block15-subtitle">162 days ago</span>
                     </p>
-                </li>
-                <li>
-                    <p class="block15-title">Contact information</p>
+						</li>
+						<li class="content25-t-t-t-t" style="list-style: none; display: inline">
+							<p class="block15-title">Contact information</p>
                     <p>
                            
                            <span class="block15-subtitle">Call-free: 800-455-0054</span>
@@ -1033,20 +1034,29 @@ padding: 10px;*/
 							<span class="block15-subtitle">
 							3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
                     </p>
-                </li>
-            </ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
         </div>
     </div>
 </div>		
 <style>
+.box {
+	padding: 25%;	
+}	
 .block15-contacts-information-before-footer-t-t-t-t {
 	background: #242424;
 	padding: 0;
 }
 .block15-static-info {
-    float: left;
     margin-top: 46px;
     padding-left: 57px;
+    width: 100%;
+    float:left;
+    min-height: 351px;		
 }
 .block15-subtitle-red{
     color: #bd2631;
@@ -1062,14 +1072,19 @@ padding: 10px;*/
     font-size: 14px;
 }
 .block15-static-info li p:first-of-type{
-    float: left;
 	display:inline-block;
+	width: 25%;
+        float:left; 
+	border-right: 1px solid #ccc
 }
 .block15-static-info li p:last-of-type{
 	margin-right: 8px;
     color: #fff;
     font-size: 14px;
 	display:inline-block;
+	width: 25%;
+    float:left; 
+	border-right: 1px solid #ccc
 }
 .block15-static-info p > span{
     display: block;
@@ -1079,12 +1094,23 @@ padding: 10px;*/
     border-right: 1px solid #e6e6e6;
     margin-right: 20px;
     margin-top: 
+    width: 25%;
+    float:left; 
+	border-right: 1px solid #ccc	    
 }
 .block15-static-info ul li:last-of-type{
     border-right: none;
     padding-right: 0;
     margin-right: 0;
+	width: 25%;
+    float:left; 
+	border-right: 1px solid #ccc
 }
+	.block15-static-info ul  {
+	width: 100%;
+    float:left;
+    min-height: 351px;
+	}
 /*  BLOCK16  */
 .lock16-footer{
     background: #131313;
