--- a/index.html
+++ b/index.html
@@ -990,8 +990,8 @@ padding: 10px;*/
 	
 	<section>
 		<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
-			 <div class="block15-static-info">
-           <!--div class="block15-inner-static-info-t-t-t-t"-->
+			 <!--div class="block15-static-info"-->
+           <div class="block15-inner-static-info-t-t-t-t">
 				<div class="row">
 					<ul>
 						<li class="content25-t-t-t-t">
@@ -1051,7 +1051,7 @@ padding: 10px;*/
 </div>		
 <style>
 .box {
-	padding: 25%;	
+	padding: 25px;	
 }	
 .block15-contacts-information-before-footer-t-t-t-t {
 	background: #242424;
