--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@ padding: 10px;*/
     color: #fff;
     font-size: 14px;
 	display:inline-block;
-	width: 25%;
+	width: 20%;
     float:left; 
 	border-right: 1px solid #ccc
 }
@@ -1100,7 +1100,7 @@ padding: 10px;*/
     border-right: 1px solid #e6e6e6;
     margin-right: 20px;
     margin-top: 
-    width: 25%;
+    width: 20%;
     float:left; 
 	border-right: 1px solid #ccc	    
 }
@@ -1252,7 +1252,8 @@ padding: 10px;*/
 .content25-t-t-t-t{    
     float:left;   
     width: 20%; 
-   border:  
+   border-right: 1px solid;
+	margin-right: 30px;
 }
 /*.content25-t-t-t-t: last-child{    
     float:left;   
