--- a/index.html
+++ b/index.html
@@ -1301,6 +1301,11 @@ padding: 10px;*/
      padding-right: 35px;
     padding-left: 35px;
 }
+.block15-content25-t-t-t-t ul li:last-of-type{
+    border-right: none;
+     padding-right: 0;
+    padding-left: 0;
+}	
 .content25-t-t-t-t br .next{
     margin-bottom: 24px;
     font-size: ;/*f*/
