--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@ a:hover {
 }
 
 body { margin: 0; } 
-div#slider { overflow: hidden; }
-div#slider figure img { width: 20%; float: left; }
+div#slider { position: relative; overflow: hidden; }
+div#slider figure img { width: 20%; float: left; display: block; }
 div#slider figure { 
   position: relative;
   width: 500%;
