--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ a:hover {
 		margin-right: 0;
 	}
 		</style>
-		<div id="slider">
+		<div id="slider"><figure>
 			<div class="block3-navigation clearfix">
 				<nav class="mobile-menu">
 					<ul>
@@ -299,12 +299,13 @@ a:hover {
 100% { left: -400%; }
 }
 
-body { margin: 0; } 
+/*body { margin: 0; } */
 div#slider { position: relative; overflow: hidden; }
 div#slider figure img { width: 20%; float: left; display: block; }
 div#slider figure { 
   position: relative;
   width: 500%;
+height:;	
   margin: 0;
   left: 0;
   text-align: left;
@@ -317,7 +318,7 @@ div#slider figure {
 				<div class="carousel" id="carousel">
 					<div class="gallery">
 						<ul class="images">
-							<li><figure><img src="img/man.jpg"></figure></li>
+							<li><img src="img/man.jpg"></li>
 						</ul>
 					</div>
 				</div>
@@ -341,7 +342,7 @@ div#slider figure {
 						<span class="block4-title-last">Vrla batteries are in stock for immediate delivery.</span>
 				</p>	
 			</div>
-		</div><!--/rel-->
+		</figure></div><!--/rel-->
 		<!--BLOCK4-->
 		
 	<style>
