--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ a:hover {
 		margin-right: 0;
 	}
 		</style>
-		<div id="slider"><figure>
+		<div id="slider">
 			<div class="block3-navigation clearfix">
 				<nav class="mobile-menu">
 					<ul>
@@ -300,12 +300,12 @@ a:hover {
 }
 
 /*body { margin: 0; } */
-div#slider { position: relative; overflow: hidden; }
-div#slider figure img { width: 20%; float: left; display: block; }
-div#slider figure { 
+div#carousel { overflow: hidden; }
+div#carousel figure img { width: 20%; float: left; }
+div#carousel figure { 
   position: relative;
   width: 500%;
-height:;	
+height: 638px;	
   margin: 0;
   left: 0;
   text-align: left;
@@ -316,11 +316,15 @@ height:;
 			</div><!--BLOCK4-->
 			<div class="block4-carusel">
 				<div class="carousel" id="carousel">
-					<div class="gallery">
+					<div class="gallery"><figure>
 						<ul class="images">
 							<li><img src="img/man.jpg"></li>
+							<li><img src="img/man.jpg"></li>
+							<li><img src="img/man.jpg"></li>
+							<li><img src="img/man.jpg"></li>
+							<li><img src="img/man.jpg"></li>
 						</ul>
-					</div>
+					</figure></div>
 				</div>
 			</div>
 			<div class="but">
