--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ div#carousel figure img { width: 20%; float: left; }
 div#carousel figure { 
   position: relative;
   width: 500%;
-height: 638px;	
+/*height: 638px;*/	
   margin: 0;
   left: 0;
   text-align: left;
