--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@ a:hover {
 }
 
 /*body { margin: 0; } */
-div#carousel { overflow: hidden; }
-div#carousel figure img { width: 20%; float: left; }
-div#carousel figure { 
+div#slider { overflow: hidden; }
+div#slider figure img { width: 20%; float: left; }
+div#slider { 
   position: relative;
   width: 500%;
 /*height: 638px;*/	
@@ -346,7 +346,7 @@ div#carousel figure {
 						<span class="block4-title-last">Vrla batteries are in stock for immediate delivery.</span>
 				</p>	
 			</div>
-		</figure></div><!--/rel-->
+		</div><!--/rel-->
 		<!--BLOCK4-->
 		
 	<style>
