--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ a:hover {
 
 /*body { margin: 0; } */
 div#slider { overflow: hidden; }
-div#slider figure img { width: 100%; float: left; }
+div#slider figure img { width: 20%; float: left; }
 div#slider { 
   position: relative;
   width: 500%;
@@ -316,15 +316,15 @@ div#slider {
 			</div><!--BLOCK4-->
 			<div class="block4-carusel">
 				<div class="carousel" id="carousel">
-					<div class="gallery"><figure>
-						<ul class="images">
+					<div class="gallery">
+						<ul class="images"><figure>
 							<li><img src="img/man.jpg"></li>
 							<li><img src="img/man.jpg"></li>
 							<li><img src="img/man.jpg"></li>
 							<li><img src="img/man.jpg"></li>
-							<li><img src="img/man.jpg"></li>
+							<li><img src="img/man.jpg"></li></figure>
 						</ul>
-					</figure></div>
+					</div>
 				</div>
 			</div>
 			<div class="but">
