--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ div#slider {
   left: 0;
   text-align: left;
   font-size: 0;
-  animation: 1s slidy infinite; 
+  animation: 9000000000000000000000000000000000000000000000000000000000000000000000000000000000000000s slidy infinite; 
 }	 
     </style>
 			</div><!--BLOCK4-->
