--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ a:hover {
     line-height: 3.5;
     font-size: 19px;
 }
-@keyframes slidy {
+/*@keyframes slidy {
 0% { left: 0%; }
 20% { left: 0%; }
 25% { left: -100%; }
@@ -299,19 +299,19 @@ a:hover {
 100% { left: -400%; }
 }
 
-/*body { margin: 0; } */
+body { margin: 0; } 
 div#slider { overflow: hidden; }
 div#slider figure img { width: 20%; float: left; }
 div#slider { 
   position: relative;
   width: 500%;
-/*height: 638px;*/	
+	
   margin: 0;
   left: 0;
   text-align: left;
   font-size: 0;
   animation: 9000000000000000000000000000000000000000000000000000000000000000000000000000000000000000s slidy infinite; 
-}	 
+}*/	 
     </style>
 			</div><!--BLOCK4-->
 			<div class="block4-carusel">
