--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ a:hover {
 .row {
 	display: inline-block;
 }
-.html /*.block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-*/.row {
+*html /*.block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-*/.row {
 	height: 1%
 }
 /*.block7-row, .block8-row, .block9-row, .block11-row, .block12-row, .block13-row, .block15-*/.row {
@@ -290,21 +290,21 @@ a:hover {
 /*@keyframes slidy {
 0% { left: 0%; }
 20% { left: 0%; }
-25% { left: -100%; }
-45% { left: -100%; }
-50% { left: -200%; }
-70% { left: -200%; }
-75% { left: -300%; }
-95% { left: -300%; }
-100% { left: -400%; }
+25% { left: -30%; }
+45% { left: -40%; }
+50% { left: -50%; }
+70% { left: -60%; }
+75% { left: -70%; }
+95% { left: -80%; }
+100% { left: -90%; }
 }
 
 body { margin: 0; } 
 div#slider { overflow: hidden; }
-div#slider figure img { width: 20%; float: left; }
+div#slider figure img { width: 100%; float: left; }
 div#slider { 
   position: relative;
-  width: 500%;
+  width: 100%;
 	
   margin: 0;
   left: 0;
@@ -630,6 +630,7 @@ padding: 10px;*/
 	background: none;
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 .block7-inner-content-pic-pic-pic, .block8-inner-content-pic-pic-pic, .block9-inner-content-pic-pic-pic {
 	width: 100%;
@@ -801,6 +802,7 @@ padding: 10px;*/
 	background: #3e302e;
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 .block11-inner-content-nopic-pic {
 	width: 100%;
@@ -894,6 +896,7 @@ padding: 10px;*/
 .block12-content-pic-pic-pic-pic-pic{
     background: none;
     padding: 0;
+box-sizing: border-box;	
 }
 .block12-inner-content-pic-pic-pic-pic-pic{
     
