--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		<style>
 		
 
-/*, *:after, *:before {
+*, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}*/
+}
 
 * {
 	margin: 0;
