--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@ padding: 10px;*/
 
 
 	<section>
-		<div class="block7-content-pic-pic-pic ">
-			<div class="block7-inner-content-pic-pic-pic">
+		<div class="block7-content-pic-pic-pic clearfix">
+			<div class="block7-inner-content-pic-pic-pic clearfix">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/Products.jpg"><!--/div-->
@@ -569,7 +569,7 @@ padding: 10px;*/
 
 <section>  
     <div class="block8-content-pic-pic-pic clearfix"-->
-			<div class="block8-inner-content-pic-pic-pic">
+			<div class="block8-inner-content-pic-pic-pic clearfix">
 				<div class="row">
 					<div class="content25-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/control.jpg"><!--/div-->
@@ -597,7 +597,7 @@ padding: 10px;*/
 
 <section>  
     <div class="block9-content-pic-pic-pic clearfix"-->
-			<div class="block9-inner-content-pic-pic-pic">
+			<div class="block9-inner-content-pic-pic-pic clearfix">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/disposal.jpg"><!--/div-->
