--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ a:hover {
 	padding: 13px 100px;
 }
 .address-block {
+	
 	float: left;
 	padding-left: 35px;
 }
@@ -574,10 +575,10 @@ padding: 10px;*/
 					<div class="content25-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/control.jpg"><!--/div-->
 					</div>
-					<div class="content25-pic-pic-pic">
+					<div class="content20-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/gear.png"><!--/div-->
 					</div>
-					<div class="content50-pic-pic-pic-r">
+					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/services.png"><!--/div-->
 						<div class="block789-example-left">
 						<p>
@@ -645,10 +646,10 @@ padding: 10px;*/
 	height: 452px;
 	box-sizing: border-box;
 }
-.content50-pic-pic-pic-r {	
-	float: right;
+.content20-pic-pic-pic-r {	
+	float: left;
 	position: relative;
-	width: 50%;
+	width: 20%;
 	height: 452px;
 	box-sizing: border-box;
 }	
