--- a/index.html
+++ b/index.html
@@ -672,6 +672,12 @@ padding: 10px;*/
 	display: block;
 	
 }
+.content20-pic-pic-pic img {
+	width: auto;
+	height: auto;
+	display: block;
+	
+}	
 	/*text*/
 .block789-example-left {
 	float: left;
