--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ padding: 10px;*/
 
 	<section>
 		<div class="block7-content-pic-pic-pic clearfix">
-			<div class="block7-inner-content-pic-pic-pic clearfix">
+			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/Products.jpg"><!--/div-->
@@ -570,7 +570,7 @@ padding: 10px;*/
 
 <section>  
     <div class="block8-content-pic-pic-pic clearfix"-->
-			<div class="block8-inner-content-pic-pic-pic clearfix">
+			<div class="block8-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content25-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/control.jpg"><!--/div-->
@@ -598,7 +598,7 @@ padding: 10px;*/
 
 <section>  
     <div class="block9-content-pic-pic-pic clearfix"-->
-			<div class="block9-inner-content-pic-pic-pic clearfix">
+			<div class="block9-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/disposal.jpg"><!--/div-->
@@ -646,7 +646,7 @@ padding: 10px;*/
 	height: 452px;
 	box-sizing: border-box;
 }
-.content20-pic-pic-pic-r {	
+.content20-pic-pic-pic {	
 	float: left;
 	
 	width: 20%;
