--- a/index.html
+++ b/index.html
@@ -637,28 +637,24 @@ padding: 10px;*/
 	width: 100%;
 	float: left;
 	height: 452px;
-	box-sizing: border-box;
 }
 .content50-pic-pic-pic {	
 	float: left;
 	position: relative;
 	width: 50%;
 	height: 452px;
-	box-sizing: border-box;
 }
-.content20-pic-pic-pic {	
+.content45-pic-pic-pic {	
 	float: left;
-	
-	width: 20%;
-	height: 452px;
-	box-sizing: border-box;
+	position: relative;
+	width: 45%;
+	height: 452px;	
 }	
 .content25-pic-pic-pic {
-	
+	position: relative;
 	float: left;
 	width: 25%;
 	height: 452px;
-	box-sizing: border-box;
 }
 .content25-pic-pic-pic img {
 	width: auto;
@@ -672,7 +668,7 @@ padding: 10px;*/
 	display: block;
 	
 }
-.content20-pic-pic-pic img {
+.content45-pic-pic-pic img {
 	width: auto;
 	height: auto;
 	display: block;
