--- a/index.html
+++ b/index.html
@@ -633,11 +633,16 @@ padding: 10px;*/
 	margin: 0;
 	
 }
-.block7-inner-content-pic-pic-pic, .block8-inner-content-pic-pic-pic, .block9-inner-content-pic-pic-pic {
+.block7-inner-content-pic-pic-pic, /*.block8-inner-content-pic-pic-pic, */.block9-inner-content-pic-pic-pic {
 	width: 100%;
 	float: left;
 	height: 452px;
 }
+.block8-inner-content-pic-pic-pic {
+	width: 95%;
+	float: left;
+	height: 452px;
+}	
 .content50-pic-pic-pic {	
 	float: left;
 	position: relative;
