--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ padding: 10px;*/
 	margin: 0;
 }
 .block11-inner-content-nopic-pic {
-	width: 100%;
+	width: 97.5%;
 	float: left;
 	height: 192px;
 	position: relative;
@@ -833,7 +833,7 @@ padding: 10px;*/
 .content36-nopic-pic {
 	position: relative;
 	float: right;
-	width: 36%;
+	width: 33.5%;
 	height: 192px;
 	padding-right: 0;
 	box-sizing: border-box;
@@ -895,8 +895,8 @@ padding: 10px;*/
                         <img src="img/4.png" alt="" title="">                    
                     </div>
                 </div>
-                <div class="content20-pic-pic-pic-pic-pic">
-                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                <div class="content17-pic-pic-pic-pic-pic">
+                    <div class="inner-content17-pic-pic-pic-pic-pic">
                         <img src="img/5.png" alt="" title="">                    
                     </div>
                 </div>
@@ -913,7 +913,7 @@ padding: 10px;*/
 }
 .block12-inner-content-pic-pic-pic-pic-pic{
     
-    width: 100%;
+    width: 97.5%;
     float:left;
     min-height: 350px;
 }
@@ -926,6 +926,15 @@ box-sizing: border-box;
    display: block;
 	
 }
+.content17-pic-pic-pic-pic-pic{
+    width: 17.5%;
+    float:left;
+box-sizing: border-box;	
+}
+.content17-pic-pic-pic-pic-pic img{
+   display: block;
+	
+}		
 /*.block12-content-pic-pic-pic-pic-pic{
     background: none;
     padding: 0;
