--- a/index.html
+++ b/index.html
@@ -1102,10 +1102,16 @@ box-sizing: border-box;
 }
 .inner-sidebar1 p > span, .inner-sidebar2 p > span, .inner-sidebar3 p > span { 
     display: block;
+margin: 20px;
+	padding: 20px;
 }
 .inner-sidebar4 p > span{
     border-right: none;
-
+}
+.block15-contacts-information-before-footer-t-t-t-t {
+	background: #242424;
+	padding: 0;
+}
 </style>
 
 
